--- a/SRC/03_entity_recog.ipynb
+++ b/SRC/03_entity_recog.ipynb
@@ -379,7 +379,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 126
+          "height": 145
         },
         "id": "S8PQF7qq_46w",
         "outputId": "747ee987-ddfa-443e-9ba3-0976e0b87bb9"
@@ -1667,24 +1667,55 @@
       "source": [
         "# Split the name into First and Family Name\n",
         "df[['FirstName', 'FamilyName']] = df['entity'].str.split(' ', 1, expand = True)\n",
-        "df"
+        "\n",
+        "# First name in Capital letter\n",
+        "df['FirstName'] = df['FirstName'].str.upper()\n",
+        "\n",
+        "# Remove accents from the First Name\n",
+        "df['FirstName'] = df['FirstName'].str.normalize('NFKD').str.encode('ascii', errors='ignore').str.decode('utf-8')"
+      ],
+      "metadata": {
+        "id": "t1KxEg5YWCTv"
+      },
+      "execution_count": 64,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Gender assignment"
+      ],
+      "metadata": {
+        "id": "5N8bptbolJNq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# https://brasil.io/dataset/genero-nomes/nomes/\n",
+        "\n",
+        "path = \"/content/drive/MyDrive/INSPER/03_trabfinal_1certif/Dados/\"\n",
+        "\n",
+        "names = pd.read_csv(path + 'nomes.csv')  \n",
+        "names_aux = names[['first_name', 'classification']]\n",
+        "names_aux"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 112
+          "height": 422
         },
-        "id": "t1KxEg5YWCTv",
-        "outputId": "cbb21bf8-f6df-4028-c160-1a8f0f6e4d88"
+        "id": "96xjvedYLp8o",
+        "outputId": "51afb8f7-bdd5-4a5f-f97e-aecbd97d42d2"
       },
-      "execution_count": 35,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-040a4e4c-4642-4ff6-95b4-55c884ca1b09\">\n",
+              "  <div id=\"df-ce50a868-f59c-4fa1-9f9d-cf66dfc9da1f\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1704,34 +1735,71 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>quote</th>\n",
-              "      <th>entity_index</th>\n",
-              "      <th>entity</th>\n",
-              "      <th>FirstName</th>\n",
-              "      <th>FamilyName</th>\n",
+              "      <th>first_name</th>\n",
+              "      <th>classification</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>4</td>\n",
-              "      <td>3</td>\n",
-              "      <td>Bruno Reis</td>\n",
-              "      <td>Bruno</td>\n",
-              "      <td>Reis</td>\n",
+              "      <td>AALINE</td>\n",
+              "      <td>F</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>5</td>\n",
-              "      <td>3</td>\n",
-              "      <td>Bruno Reis</td>\n",
-              "      <td>Bruno</td>\n",
-              "      <td>Reis</td>\n",
+              "      <td>AARAO</td>\n",
+              "      <td>M</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>AARON</td>\n",
+              "      <td>M</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>ABA</td>\n",
+              "      <td>F</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>ABADE</td>\n",
+              "      <td>M</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>100782</th>\n",
+              "      <td>MACLEIA</td>\n",
+              "      <td>F</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>100783</th>\n",
+              "      <td>GIULINE</td>\n",
+              "      <td>F</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>100784</th>\n",
+              "      <td>DEMAILTON</td>\n",
+              "      <td>M</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>100785</th>\n",
+              "      <td>ILIVIA</td>\n",
+              "      <td>F</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>100786</th>\n",
+              "      <td>FADSON</td>\n",
+              "      <td>M</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
+              "<p>100787 rows × 2 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-040a4e4c-4642-4ff6-95b4-55c884ca1b09')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ce50a868-f59c-4fa1-9f9d-cf66dfc9da1f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1782,12 +1850,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-040a4e4c-4642-4ff6-95b4-55c884ca1b09 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ce50a868-f59c-4fa1-9f9d-cf66dfc9da1f button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-040a4e4c-4642-4ff6-95b4-55c884ca1b09');\n",
+              "          const element = document.querySelector('#df-ce50a868-f59c-4fa1-9f9d-cf66dfc9da1f');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1809,26 +1877,189 @@
               "  "
             ],
             "text/plain": [
-              "   quote  entity_index      entity FirstName FamilyName\n",
-              "0      4             3  Bruno Reis     Bruno       Reis\n",
-              "1      5             3  Bruno Reis     Bruno       Reis"
+              "       first_name classification\n",
+              "0          AALINE              F\n",
+              "1           AARAO              M\n",
+              "2           AARON              M\n",
+              "3             ABA              F\n",
+              "4           ABADE              M\n",
+              "...           ...            ...\n",
+              "100782    MACLEIA              F\n",
+              "100783    GIULINE              F\n",
+              "100784  DEMAILTON              M\n",
+              "100785     ILIVIA              F\n",
+              "100786     FADSON              M\n",
+              "\n",
+              "[100787 rows x 2 columns]"
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 39
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# https://brasil.io/dataset/genero-nomes/nomes/"
+        "df.merge(names_aux, left_on = 'FirstName', right_on = 'first_name')"
       ],
       "metadata": {
-        "id": "96xjvedYLp8o"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 112
+        },
+        "id": "W_jrRBB5ncq2",
+        "outputId": "2d344d87-e1e7-4b67-e734-9b91249f6551"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "\n",
+              "  <div id=\"df-13546bb1-c763-428f-b625-1617162e5e43\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>quote</th>\n",
+              "      <th>entity_index</th>\n",
+              "      <th>entity</th>\n",
+              "      <th>FirstName</th>\n",
+              "      <th>FamilyName</th>\n",
+              "      <th>first_name</th>\n",
+              "      <th>classification</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>4</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Bruno Reis</td>\n",
+              "      <td>BRUNO</td>\n",
+              "      <td>Reis</td>\n",
+              "      <td>BRUNO</td>\n",
+              "      <td>M</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>5</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Bruno Reis</td>\n",
+              "      <td>BRUNO</td>\n",
+              "      <td>Reis</td>\n",
+              "      <td>BRUNO</td>\n",
+              "      <td>M</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-13546bb1-c763-428f-b625-1617162e5e43')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-13546bb1-c763-428f-b625-1617162e5e43 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-13546bb1-c763-428f-b625-1617162e5e43');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ],
+            "text/plain": [
+              "   quote  entity_index      entity  ... FamilyName first_name classification\n",
+              "0      4             3  Bruno Reis  ...       Reis      BRUNO              M\n",
+              "1      5             3  Bruno Reis  ...       Reis      BRUNO              M\n",
+              "\n",
+              "[2 rows x 7 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
     }
   ]
 }
